--- a/themes/catppuccin_mocha_tmux.conf
+++ b/themes/catppuccin_mocha_tmux.conf
@@ -5,19 +5,19 @@ set -ogq @thm_bg "#1e1e2e"
 set -ogq @thm_fg "#cdd6f4"
 
 # Colors
-set -ogq @thm_rosewater "#f5e0dc"
+set -ogq @thm_rosewater "#eba0ac"
 set -ogq @thm_flamingo "#f2cdcd"
 set -ogq @thm_rosewater "#f5e0dc"
 set -ogq @thm_pink "#f5c2e7"
-set -ogq @thm_mauve "#cba6f7"
+set -ogq @thm_mauve "#fab387"
 set -ogq @thm_red "#f38ba8"
 set -ogq @thm_maroon "#eba0ac"
 set -ogq @thm_peach "#fab387"
 set -ogq @thm_yellow "#f9e2af"
 set -ogq @thm_green "#a6e3a1"
 set -ogq @thm_teal "#94e2d5"
-set -ogq @thm_sky "#89dceb"
-set -ogq @thm_sapphire "#74c7ec"
+set -ogq @thm_sky "#89b4fa"
+set -ogq @thm_sapphire "#89b4fa"
 set -ogq @thm_blue "#89b4fa"
 set -ogq @thm_lavender "#b4befe"
 
@@ -32,4 +32,4 @@ set -ogq @thm_surface_1 "#45475a"
 set -ogq @thm_surface_0 "#313244"
 set -ogq @thm_mantle "#181825"
 set -ogq @thm_crust "#11111b"
-
+#
